Put links to recipes in unordered list

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="spicypastavodka.html">Spicy Pasta Vodka</a>
-    <a href="mangostickyrice.html">Mango Sticky Rice</a>
-    <a href="friedrice.html">Fried Rice</a>
+
+    <ul>
+        <li><a href="spicypastavodka.html">Spicy Pasta Vodka</a></li>
+        <li><a href="mangostickyrice.html">Mango Sticky Rice</a></li>
+        <li><a href="friedrice.html">Fried Rice</a></li>
+    </ul>
 </body>
 <footer>
     <p>Follow <a href="https://instagram.com/jetereats">@jetereats</a> on Instagram for more!</p>
