Fixed link directory to include root URL of index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li><a href="spicypastavodka.html">Spicy Pasta Vodka</a></li>
-        <li><a href="mangostickyrice.html">Mango Sticky Rice</a></li>
-        <li><a href="friedrice.html">Fried Rice</a></li>
+        <li><a href="../odin-recipes/recipes/spicypastavodka.html">Spicy Pasta Vodka</a></li>
+        <li><a href="../odin-recipes/recipes/mangostickyrice.html">Mango Sticky Rice</a></li>
+        <li><a href="../odin-recipes/recipes/friedrice.html">Fried Rice</a></li>
     </ul>
 </body>
 <footer>
